--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@loadable/component": "^5.15.3",
     "@mui/material": "^5.14.17",
+    "@types/loadable__component": "^5.13.7",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
