--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "electron": "27.0.4",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
     "react-router-dom": "^6.18.0",
