- Mudança nas pastas - mainWindow integrado a main.ts - teclas de atalho "funcionam" - Renomeado electronAPI para app em funções ipc - Formatação com Prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
     "paths": {
       "*": ["node_modules/*"]
     }
