--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
+    "node-polyfill-webpack-plugin": "^3.0.0",
     "react-router-dom": "^6.18.0",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
