--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/loadable__component": "^5.13.7",
     "electron-squirrel-startup": "^1.0.0",
+    "music-metadata": "^7.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
