--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@electron-forge/plugin-webpack": "^6.4.2",
     "@types/node": "^20.10.3",
+    "@types/pouchdb": "^6.4.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -62,6 +63,7 @@
     "@types/loadable__component": "^5.13.7",
     "electron-squirrel-startup": "^1.0.0",
     "music-metadata": "^7.14.0",
+    "pouchdb": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
