--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "music-metadata": "^7.14.0",
     "pouchdb": "^8.0.1",
+    "pouchdb-find": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
