Header criado Scrollbar das páginas atualizada

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^20.10.3",
     "@types/pouchdb": "^6.4.2",
     "@types/react": "^18.2.37",
+    "@types/react-custom-scroll": "^5.0.3",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -66,6 +67,7 @@
     "pouchdb": "^8.0.1",
     "pouchdb-find": "^8.0.1",
     "react": "^18.2.0",
+    "react-custom-scroll": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
