Projeto migrado para electron-vite para melhorar o desenvolvimento devido a lentidão do webpack

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,9 @@
     "plugin:react/jsx-runtime",
     "plugin:react-hooks/recommended",
     "plugin:react-redux/recommended",
-    "prettier"
+    "prettier",
+    "@electron-toolkit/eslint-config-ts/recommended",
+    "@electron-toolkit/eslint-config-prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": [
