--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "productName": "Vimp",
   "version": "0.1.0",
   "description": "Vimp - video & music player",
-  "main": ".webpack/main",
+  "main": ".vite/main/main.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "start": "electron-vite dev",
+    "preview": "electron-vite preview",
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
+    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
+    "typecheck": "npm run typecheck:node && npm run typecheck:web",
+    "build": "npm run typecheck && electron-vite build",
+    "postinstall": "electron-builder install-app-deps",
+    "build:unpack": "npm run build && electron-builder --dir",
+    "build:win": "npm run build && electron-builder --win",
+    "build:mac": "electron-vite build && electron-builder --mac",
+    "build:linux": "electron-vite build && electron-builder --linux"
   },
   "keywords": [],
   "author": {
@@ -18,59 +26,36 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/preset-react": "^7.23.3",
-    "@electron-forge/cli": "^6.4.2",
-    "@electron-forge/maker-deb": "^6.4.2",
-    "@electron-forge/maker-rpm": "^6.4.2",
-    "@electron-forge/maker-squirrel": "^6.4.2",
-    "@electron-forge/maker-zip": "^6.4.2",
-    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
-    "@electron-forge/plugin-webpack": "^6.4.2",
+    "@electron-toolkit/tsconfig": "^1.0.1",
     "@types/node": "^20.10.3",
     "@types/pouchdb": "^6.4.2",
-    "@types/react": "^18.2.37",
-    "@types/react-custom-scroll": "^5.0.3",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@vercel/webpack-asset-relocator-loader": "1.7.3",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.0.0",
-    "electron": "28.1.3",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.25.0",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
+    "electron": "^28.2.0",
+    "electron-builder": "^24.9.1",
+    "electron-vite": "^2.0.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-redux": "^4.1.0",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.13",
-    "node-loader": "^2.0.0",
-    "node-polyfill-webpack-plugin": "^3.0.0",
-    "react-router-dom": "^6.18.0",
-    "style-loader": "^3.0.0",
-    "ts-loader": "^9.2.2",
-    "ts-node": "^10.0.0",
-    "typescript": "~4.5.4"
+    "react-router-dom": "^6.22.3",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@loadable/component": "^5.15.3",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.17",
-    "@reduxjs/toolkit": "^2.0.1",
-    "@types/loadable__component": "^5.13.7",
+    "@electron-toolkit/preload": "^3.0.0",
+    "@electron-toolkit/utils": "^3.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.3",
     "electron-squirrel-startup": "^1.0.0",
     "music-metadata": "^7.14.0",
     "pouchdb": "^8.0.1",
     "pouchdb-find": "^8.0.1",
     "react": "^18.2.0",
-    "react-custom-scroll": "^5.0.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.4",
-    "redux": "^5.0.1",
-    "webpack": "^5.89.0"
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   }
 }
