--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Vimp - video & music player",
   "main": ".vite/main/main.js",
   "scripts": {
-    "start": "electron-vite dev",
+    "start": "electron-vite dev -w",
     "preview": "electron-vite preview",
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
