--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,11 +21,7 @@
     "@electron-toolkit/eslint-config-prettier"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint",
-    "react-redux",
-    "import"
-  ],
+  "plugins": ["@typescript-eslint", "react-redux", "import"],
   "rules": {
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off"
