--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@reduxjs/toolkit": "^2.2.3",
     "electron-squirrel-startup": "^1.0.0",
     "music-metadata": "^7.14.0",
