--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": ".vite/main/main.js",
   "scripts": {
     "start": "electron-vite dev",
-    "start:watch": "electron-vite dev -w",
+    "start:w": "electron-vite dev -w",
     "preview": "electron-vite preview",
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
