--- a/package.json
+++ b/package.json
@@ -55,8 +55,12 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@phosphor-icons/react": "^2.1.4",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "music-metadata": "^7.14.0",
     "pouchdb": "^8.0.1",
@@ -64,6 +68,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
