--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@phosphor-icons/react": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.3",
     "class-variance-authority": "^0.7.0",
