:sparkles: feat: Escanear diretórios e importar músicas

--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
+    "globby": "^14.0.1",
     "music-metadata": "^7.14.0",
     "pouchdb": "^8.0.1",
     "pouchdb-find": "^8.0.1",
+    "queue": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
