:heavy_plus_sign: build: Zustand adicionado

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2"
   }
 }
