:heavy_plus_sign: build: react-virtuoso e react-window adicionados para testes

--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "queue": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-virtuoso": "^4.7.11",
+    "react-window": "^1.8.10",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
