--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
   "plugins": ["@typescript-eslint", "import"],
   "rules": {
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "import/no-unresolved": "off"
   }
 }
