:truck: chore: src renomeada para renderer

--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "app/src/index.css",
+    "css": "app/renderer/index.css",
     "baseColor": "neutral",
     "cssVariables": false,
     "prefix": ""
