:sparkles: feat: adicionado novos atalhos para pastas do renderer

--- a/components.json
+++ b/components.json
@@ -11,8 +11,8 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/utils",
-    "ui": "@/components/common"
+    "components": "@components",
+    "utils": "@utils",
+    "ui": "@components/common"
   }
 }
