--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -12,7 +12,14 @@
     "noUnusedParameters": false,
     // This config must be the same as in electron.vite.config
     "paths": {
-      "@/*": ["./app/renderer/*"],
+      "@renderer/*": ["./app/renderer/*"],
+      "@assets/*": ["./app/renderer/assets/*"],
+      "@components/*": ["./app/renderer/components/*"],
+      "@features/*": ["./app/renderer/features/*"],
+      "@hooks/*": ["./app/renderer/hooks/*"],
+      "@stores/*": ["./app/renderer/stores/*"],
+      "@utils/*": ["./app/renderer/utils/*"],
+      "@views/*": ["./app/renderer/views/*"]
     }
   }
 }
