--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,14 @@
     "baseUrl": ".",
     // This config must be the same as in electron.vite.config
     "paths": {
-      "@/*": [
-        "./app/renderer/*"
-      ]
+      "@renderer/*": ["./app/renderer/*"],
+      "@assets/*": ["./app/renderer/assets/*"],
+      "@components/*": ["./app/renderer/components/*"],
+      "@features/*": ["./app/renderer/features/*"],
+      "@hooks/*": ["./app/renderer/hooks/*"],
+      "@stores/*": ["./app/renderer/stores/*"],
+      "@utils/*": ["./app/renderer/utils/*"],
+      "@views/*": ["./app/renderer/views/*"]
     }
   },
   "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
