--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,5 +10,10 @@
     "composite": true,
     "types": ["electron-vite/node"],
     "noUnusedLocals": false,
+    "paths": {
+      "@shared/*": ["./app/shared/*"],
+      "@main/*": ["./app/main/*"],
+      "@modules/*": ["./app/main/modules/*"]
+    }
   }
 }
