--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -12,6 +12,7 @@
     "noUnusedParameters": false,
     // This config must be the same as in electron.vite.config
     "paths": {
+      "@shared/*": ["./app/shared/*"],
       "@renderer/*": ["./app/renderer/*"],
       "@assets/*": ["./app/renderer/assets/*"],
       "@components/*": ["./app/renderer/components/*"],
