--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "electron": "^28.2.0",
-    "electron-builder": "^24.13.3",
-    "electron-vite": "^2.2.0",
+    "electron": "^32.1.0",
+    "electron-builder": "^25.0.5",
+    "electron-builder-squirrel-windows": "25.0.5",
+    "electron-vite": "^2.3.0",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
@@ -50,11 +52,10 @@
     "prettier-plugin-tailwindcss": "^0.5.13",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.3.3",
+    "typescript": "^5.6.2",
     "vite": "^5.2.11"
   },
   "dependencies": {
-    "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "@phosphor-icons/react": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.0",
@@ -62,8 +63,7 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
-    "@tanstack/react-virtual": "^3.5.1",
-    "chokidar": "^3.6.0",
+    "chokidar": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
@@ -76,8 +76,7 @@
     "queue": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-virtuoso": "^4.7.11",
-    "react-window": "^1.8.10",
+    "react-virtuoso": "^4.10.4",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
