--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@shared/*": ["./app/shared/*"],
       "@main/*": ["./app/main/*"],
       "@modules/*": ["./app/main/modules/*"],
+      "@interfaces/*": ["./app/main/interfaces/*"],
       "@databases/*": ["./app/main/databases/*"],
       "@renderer/*": ["./app/renderer/*"],
       "@assets/*": ["./app/renderer/assets/*"],
