--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,6 +14,7 @@
       "@shared/*": ["./app/shared/*"],
       "@main/*": ["./app/main/*"],
       "@modules/*": ["./app/main/modules/*"],
+      "@interfaces/*": ["./app/main/interfaces/*"],
       "@databases/*": ["./app/main/databases/*"]
     }
   }
