--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,18 +5,18 @@
     // This config must be the same as in electron.vite.config
     "paths": {
       "@shared/*": ["./app/shared/*"],
-      "@main/*": ["./app/main/*"],
       "@modules/*": ["./app/main/modules/*"],
       "@interfaces/*": ["./app/main/interfaces/*"],
       "@databases/*": ["./app/main/databases/*"],
-      "@renderer/*": ["./app/renderer/*"],
+      "@main/*": ["./app/main/*"],
       "@assets/*": ["./app/renderer/assets/*"],
       "@components/*": ["./app/renderer/components/*"],
       "@features/*": ["./app/renderer/features/*"],
       "@hooks/*": ["./app/renderer/hooks/*"],
       "@stores/*": ["./app/renderer/stores/*"],
       "@utils/*": ["./app/renderer/utils/*"],
-      "@views/*": ["./app/renderer/views/*"]
+      "@views/*": ["./app/renderer/views/*"],
+      "@renderer/*": ["./app/renderer/*"]
     }
   },
   "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
