--- a/components.json
+++ b/components.json
@@ -12,7 +12,7 @@
   },
   "aliases": {
     "components": "@components",
-    "utils": "@utils",
+    "utils": "@render-utils",
     "ui": "@components/common"
   }
 }
