--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,14 @@
       "@modules/*": ["./app/main/modules/*"],
       "@interfaces/*": ["./app/main/interfaces/*"],
       "@databases/*": ["./app/main/databases/*"],
+      "@main-utils/*": ["./app/main/utils/*"],
       "@main/*": ["./app/main/*"],
       "@assets/*": ["./app/renderer/assets/*"],
       "@components/*": ["./app/renderer/components/*"],
       "@features/*": ["./app/renderer/features/*"],
       "@hooks/*": ["./app/renderer/hooks/*"],
       "@stores/*": ["./app/renderer/stores/*"],
-      "@utils/*": ["./app/renderer/utils/*"],
+      "@render-utils/*": ["./app/renderer/utils/*"],
       "@views/*": ["./app/renderer/views/*"],
       "@renderer/*": ["./app/renderer/*"]
     }
