--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -18,7 +18,7 @@
       "@features/*": ["./app/renderer/features/*"],
       "@hooks/*": ["./app/renderer/hooks/*"],
       "@stores/*": ["./app/renderer/stores/*"],
-      "@utils/*": ["./app/renderer/utils/*"],
+      "@render-utils/*": ["./app/renderer/utils/*"],
       "@views/*": ["./app/renderer/views/*"],
       "@renderer/*": ["./app/renderer/*"]
     }
