--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
     "baseUrl": ".",
     // This config must be the same as in electron.vite.config
     "paths": {
+      "@interfaces/*": ["./app/shared/interfaces/*"],
       "@shared/*": ["./app/shared/*"],
       "@modules/*": ["./app/main/modules/*"],
-      "@interfaces/*": ["./app/main/interfaces/*"],
       "@databases/*": ["./app/main/databases/*"],
       "@main-utils/*": ["./app/main/utils/*"],
       "@main/*": ["./app/main/*"],
