--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,9 +11,9 @@
     "types": ["electron-vite/node"],
     "noUnusedLocals": false,
     "paths": {
+      "@interfaces/*": ["./app/shared/interfaces/*"],
       "@shared/*": ["./app/shared/*"],
       "@modules/*": ["./app/main/modules/*"],
-      "@interfaces/*": ["./app/main/interfaces/*"],
       "@databases/*": ["./app/main/databases/*"],
       "@main-utils/*": ["./app/main/utils/*"],
       "@main/*": ["./app/main/*"]
