--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vimp",
   "productName": "Vimp",
+  "type": "module",
   "version": "0.1.0",
   "description": "Vimp - video & music player",
   "main": ".vite/main/main.js",
@@ -9,7 +10,7 @@
     "start:w": "electron-vite dev -w",
     "preview": "electron-vite preview",
     "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "lint": "eslint . --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
@@ -27,32 +28,31 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@electron-toolkit/eslint-config-prettier": "^2.0.0",
-    "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@eslint/js": "^9.12.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/lodash": "^4.17.4",
     "@types/node": "^20.10.3",
     "@types/pouchdb": "^6.4.2",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "electron": "^32.1.0",
     "electron-builder": "^25.0.5",
     "electron-builder-squirrel-windows": "25.0.5",
     "electron-vite": "^2.3.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint": "^9.12.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.10.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0",
     "vite": "^5.4.6"
   },
   "dependencies": {
