--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,22 +3,10 @@
   "files": [],
   "compilerOptions": {
     "baseUrl": ".",
-    // This config must be the same as in electron.vite.config
+    // Helps shadcn-ui find where it needs to put the components
     "paths": {
-      "@interfaces/*": ["./app/shared/interfaces/*"],
-      "@shared/*": ["./app/shared/*"],
-      "@modules/*": ["./app/main/modules/*"],
-      "@databases/*": ["./app/main/databases/*"],
-      "@main-utils/*": ["./app/main/utils/*"],
-      "@main/*": ["./app/main/*"],
-      "@assets/*": ["./app/renderer/assets/*"],
       "@components/*": ["./app/renderer/components/*"],
-      "@features/*": ["./app/renderer/features/*"],
-      "@hooks/*": ["./app/renderer/hooks/*"],
-      "@stores/*": ["./app/renderer/stores/*"],
       "@render-utils/*": ["./app/renderer/utils/*"],
-      "@views/*": ["./app/renderer/views/*"],
-      "@renderer/*": ["./app/renderer/*"]
     }
   },
   "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
