--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "electron-vite dev",
     "start:w": "electron-vite dev -w",
     "preview": "electron-vite preview",
+    "test": "jest",
     "format": "prettier --write .",
     "lint": "eslint . --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
@@ -30,6 +31,7 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@eslint/js": "^9.12.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.4",
     "@types/node": "^20.10.3",
     "@types/pouchdb": "^6.4.2",
@@ -45,11 +47,13 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.10.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.3",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0",
     "vite": "^5.4.6"
