--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "electron-store": "8.2.0",
     "globby": "^14.0.1",
     "lodash": "^4.17.21",
+    "motion": "^12.0.6",
     "music-metadata": "^7.14.0",
     "pouchdb": "^9.0.0",
     "pouchdb-find": "^9.0.0",
