--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@eslint/js": "^9.12.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.4",
@@ -38,7 +39,6 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.20",
     "electron": "^32.1.0",
     "electron-builder": "^25.0.5",
     "electron-builder-squirrel-windows": "25.0.5",
@@ -50,9 +50,9 @@
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react-router-dom": "^6.22.3",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0",
