--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@eslint/js": "^9.12.0",
     "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.3",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.4",
