--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@phosphor-icons/react": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
