--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "@electron-toolkit/utils": "^3.0.0",
     "@phosphor-icons/react": "^2.1.4",
+    "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.0.5",
