:heavy_plus_sign: build: (Python) FastAPI e Typer adicionados

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "colorama==0.4.6",
     "decorator==4.4.2",
     "eel==0.16.0",
+    "fastapi[standard]>=0.116.0",
     "future==1.0.0",
     "gevent==24.2.1",
     "gevent-websocket==0.10.1",
@@ -38,6 +39,7 @@ dependencies = [
     "pywin32-ctypes==0.2.2",
     "requests==2.32.3",
     "tqdm==4.66.4",
+    "typer>=0.16.0",
     "urllib3==2.2.1",
     "whichcraft==0.6.1",
     "zope-event==5.0",
