--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -1,5 +1,6 @@
 {
-  "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "./tsconfig.json",
   "include": [
     "app/renderer/types/index.d.ts",
     "app/renderer/**/*",
@@ -7,6 +8,7 @@
   ],
   "compilerOptions": {
     "composite": true,
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "jsx": "react-jsx",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
