--- a/package.json
+++ b/package.json
@@ -49,30 +49,30 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11",
     "ts-jest": "^29.4.0",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0",
     "vite": "^7.0.3"
   },
   "dependencies": {
     "@electron-toolkit/utils": "^4.0.0",
-    "@phosphor-icons/react": "^2.1.4",
-    "@radix-ui/react-context-menu": "^2.2.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-popover": "^1.1.6",
+    "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-context-menu": "^2.2.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "chokidar": "^4.0.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "electron-log": "^5.2.4",
-    "electron-squirrel-startup": "^1.0.0",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "chokidar": "^4.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "electron-log": "^5.4.1",
     "electron-store": "8.2.0",
-    "globby": "^14.0.1",
+    "globby": "^14.1.0",
     "lodash": "^4.17.21",
-    "motion": "^12.0.6",
+    "motion": "^12.23.1",
     "music-metadata": "^7.14.0",
     "pouchdb": "^9.0.0",
     "pouchdb-find": "^9.0.0",
@@ -80,9 +80,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
-    "react-virtuoso": "^4.10.4",
-    "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.5.2"
+    "react-virtuoso": "^4.13.0",
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.6"
   }
 }
