--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vite": "^7.0.3"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-beta.1",
     "@electron-toolkit/utils": "^4.0.0",
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-context-menu": "^2.2.15",
