--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-context-menu": "^2.2.15",
