--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^6.0.0-rc.1",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "globals": "^16.3.0",
     "jest": "^30.0.4",
     "prettier": "^3.6.2",
