--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.7.0",
-    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "babel-plugin-react-compiler": "^1.0.0",
     "electron": "^37.6.1",
     "electron-builder": "^26.0.12",
     "electron-vite": "^4.0.0",
