--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "start:w": "electron-vite dev -w",
     "preview": "electron-vite preview",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:main": "jest --selectProjects main",
+    "test:renderer": "jest --selectProjects renderer",
+    "test:preload": "jest --selectProjects preload",
     "format": "prettier --write .",
     "lint": "eslint . --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
@@ -51,6 +56,7 @@
     "eslint-plugin-react-hooks": "^7.0.0",
     "globals": "^16.3.0",
     "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.2.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11",
