--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@react-three/fiber": "^9.5.0",
+    "@types/three": "^0.182.0",
     "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -98,6 +100,7 @@
     "react-router-dom": "^6.30.1",
     "react-virtuoso": "^4.13.0",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.182.0",
     "zustand": "^5.0.6"
   }
 }
