--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "electron": "^37.6.1",
     "electron-builder": "^26.0.12",
+    "electron-devtools-installer": "^4.0.0",
     "electron-vite": "^4.0.0",
     "eslint": "^9.30.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
