--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
